--- a/package.json
+++ b/package.json
@@ -166,7 +166,12 @@
     "yauzl": "^2.10.0"
   },
   "devDependencies": {
-    "cypress": "^12.3.0"
+    "@cypress/xpath": "^2.0.3",
+    "cypress": "^12.3.0",
+    "http-method-enum": "^1.0.0",
+    "http-methods-enum": "^0.1.1",
+    "http-status-codes": "^2.2.0",
+    "jimp": "^0.16.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
