--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "fd-slicer": "^1.1.0",
     "figures": "^3.2.0",
     "forever-agent": "^0.6.1",
-    "form-data": "^2.3.3",
     "fs-extra": "^9.1.0",
     "fs.realpath": "^1.0.0",
     "function-bind": "^1.1.1",
@@ -167,7 +166,10 @@
   },
   "devDependencies": {
     "@cypress/xpath": "^2.0.3",
+    "axios": "^1.2.4",
     "cypress": "^12.3.0",
+    "form-data": "^4.0.0",
+    "formdata-node": "^5.0.0",
     "http-method-enum": "^1.0.0",
     "http-methods-enum": "^0.1.1",
     "http-status-codes": "^2.2.0",
