--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "concat-map": "^0.0.1",
     "core-util-is": "^1.0.2",
     "cross-spawn": "^7.0.3",
+    "cypress-downloadfile": "^1.2.3",
     "dashdash": "^1.14.1",
     "dayjs": "^1.11.7",
     "debug": "^4.3.4",
@@ -176,7 +177,7 @@
     "jimp": "^0.16.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx cypress run --headed"
   },
   "repository": {
     "type": "git",
